# dev-setup-py

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  dev-setup  install.sh  pyproject.toml
.claude/: settings.local.json
.claude/.claude/skills/run-stuff/: SKILL.md  smoke.sh
.github/workflows/: bump.yml  ci.yml  publish.yml  repair-v1.8.1-tag.yml  test-installs.yml
app-design-output/: development-plan.md  specifications.md  stack-decisions.md
dev/: Dockerfile  Dockerfile.ci  Makefile  docker-compose.yml
docs/specs/: README.md
docs/specs/agent/: development-plan.md  specifications.md
src/dev_setup/: __init__.py  __main__.py  agent_tools.schema.json  agent_tools.yaml  base.py  catalog.py  cli.py  function_runner.py  functions.schema.json  functions.yaml  functions_catalog.py  functions_registry.py  generic.py  registry.py  tools.yaml  ui.py
src/dev_setup/agent/: __init__.py  approval.py  bridges.py  catalog.py  completion.py  config.py  loop.py  ollama.py  preflight.py  primitives.py  registry.py  sandbox.py  session.py  transcript.py  wizard.py
src/dev_setup/commands/: add_cmd.py  agent_cmd.py  catalog_cmd.py  delete_cmd.py  docs_cmd.py  functions_cmd.py  help_cmd.py  install_cmd.py  list_cmd.py  remove_cmd.py  run_cmd.py  skills_cmd.py  update_cmd.py
src/dev_setup/scripts/: __init__.py
tests/: test_agent.py  test_agent_completion.py  test_agent_loop.py  test_agent_sandbox.py  test_agent_tools.py  test_agent_wizard.py  test_catalog.py  test_functions.py  test_generic.py  test_registry.py
tests/integration/: conftest.py  test_agent_smoke.py  test_agent_tui.py  test_tools.py
