[project]
name = "dev-setup"
version = "1.0.0"
description = "Development environment setup CLI"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "questionary>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dev_setup"]

[tool.uv]
package = true
