[project]
name = "devstuff"
version = "1.15.0"
description = "Development environment setup CLI for Linux"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Sawyer", email = "sawyerksu@gmail.com" }
]
keywords = ["cli", "devtools", "setup", "linux", "developer"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: System :: Installation/Setup",
    "Topic :: Utilities",
]
dependencies = [
    "click>=8.1",
    "pyyaml>=6.0",
    "rich>=13.0",
    "questionary>=2.0",
]

[project.scripts]
devstuff = "dev_setup.__main__:main"
dev-setup = "dev_setup.__main__:main"

[project.urls]
Repository = "https://github.com/thesawdawg/dev-setup-py"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dev_setup"]

[dependency-groups]
dev = [
    "commitizen>=3.0",
    "pytest>=8.0",
    "ruff>=0.8",
]

[tool.ruff]
line-length = 110
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = [
    "SIM105",  # try/except/pass is intentional around subprocess probes
]

[tool.commitizen]
name = "cz_conventional_commits"
version_provider = "pep621"
tag_format = "v$version"
update_changelog_on_bump = true

[tool.pytest.ini_options]
addopts = "-m 'not integration'"
markers = [
    "integration: real-system tests that install software (require sudo and network access)",
]
